
[metadata]
name = hot
description = Routing matrix inference using high-order statistics
license = CC BY-NC 4.0
url = https://github.com/KevinDalySmith/high-order-tomography
author = Kevin D. Smith
author_email = kevinsmith@ucsb.edu
version = 0.1.0
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.8.0
install_requires =
    cvxpy >= 1.1.7
    networkx >= 2.5.1
    numpy >= 1.21.4
    PyMoments >= 1.0.1
    scipy >= 1.6.2
    setuptools >= 59.4.0
    tqdm >= 4.54.0
packages =
    hot

[options.entry_points]
console_scripts =
    hot = hot.main:main
